# gs-suggestions-dataset

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LIDSTONE_results.csv  MLE_results.csv  Makefile  README.md  api-requirements.txt  dataset.py  docker-compose.yaml  eval_results_PhilBERTA.json  opt_log_results_lidstone.pkl  pyproject.toml  requirements.txt  test_abs.csv  topk.ipynb
api/: __init__.py  database.py  exceptions.py  main.py  models.py  route.py  routes.py  schema.py  schemas.py  service.py
api/routes/: models.py  predictions.py
api/services/: db_service.py  model_service.py  suggestions_service.py
api/templates/: home.html
backend/api/: main.py
backend/config/: settings.py
backend/core/: __init__.py  cleaner.py  maat_leiden_grammar.md  preprocess.py  transpiler_spec.md
config/: settings.py
data/: test_abs.json
dataset_Giannessi/: pyproject.toml
dataset_Giannessi/dataset_Giannessi/: corpus_downloader.py  pipe.py
eval/: KFold.py  eval.py  readme.md  results.py  topk_bert_models.ipynb  topk_ngrams.py
eval/results/: eval_results_Logion_normal.json
finetuning/: __init__.py  accuracy.py  dataset.py  eval_results_AristoBERTo.json  eval_results_Logion.json  eval_results_greBerta.json  plots.py  utils.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: styles.css
gs-suggestions-dataset/: LIDSTONE_results.csv  MLE_results.csv  convert_errors.json  corpus_downloader.py  main.py  pipe.py  split.py
gs-suggestions-dataset/config/: readme.md  settings.py
gs-suggestions-dataset/data/: First1KGreek.json  MAAT_0.json  PerseusDL.json
gs-suggestions-dataset/models/: bigram.py  evaluate.py  infer.py  readme.md  training.py  trigram.py  trigram_model.pkl  trigram_nltk.py  (+1 more)
inference/: __init__.py  suggests.py
metrics/: __init__.py  accuracy.py  pp.py
models/: evaluate.py  infer.py  readme.md  training.py
predictions/: bert.py  ngrams.py  utils.py
scripts/: readme.md  split.py  tei_converter.py  tei_pipeline.py  valutation_abs_loader.py
tests/: __init__.py  debug_models.py  test_fill_mask.py  test_tei_converter.py  test_tei_pipeline.py  tuning.py
train/: __init__.py  cleaner.py  readme.md  training.py
tuning/: __init__.py  params.py  start.py
utils/: __init__.py  preprocess.py
(+306 files in other folders)
