[tool.poetry]
name = "gs-suggestions-dataset"
version = "0.4.0"
description = ""
package-mode = false
authors = ["Gabriele <gabrielegiannessi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.11,<3.13"
maat = {git = "https://github.com/WMU-Herculaneum-Project/maat"}
nltk = "^3.9.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
cltk = "^1.5.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
datasets = "^3.4.1"
transformers = "^4.50.0"
pymongo = "^4.11.3"
torch = "^2.6.0"
bert-score = "^0.3.13"
bayesian-optimization = "^2.0.3"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
