[tool.poetry]
name = "gs-suggestions-dataset"
version = "0.4.0"
description = ""
package-mode = false
authors = ["Gabriele <gabrielegiannessi@gmail.com>"]
readme = "README.md"
packages = [
    { include = "backend" },
    { include = "models" }
]

[tool.poetry.dependencies]
python =  ">=3.11,<3.13"
maat = { path = "packages/maat", develop = true}
nltk = "^3.9.1"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
cltk = "^1.5.0"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
datasets = "^3.4.1"
transformers = {extras = ["torch"], version = "^5.5.4"}
pymongo = "^4.11.3"
torch = "^2.6.0"
bert-score = "^0.3.13"
bayesian-optimization = "^2.0.3"
python-dotenv = "^1.1.0"
pytest-asyncio = "^1.3.0"
wandb = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

